# birds_of_play

./: .cursorrules  .flake8  .gitignore  .gitmodules  .vercelignore  BUILD.md  CMakeLists.txt  CUSTOM_DOMAIN_SETUP.md  DEMO_VIDEO_SETUP.md  FILE_STORAGE_MIGRATION.md  LICENSE.md  PYTHON_BINDINGS_README.md  QUICK_RECORDING_STEPS.md  README.md  RECORDING_GUIDE.md  REQUIREMENTS.md  THUMBNAIL_AND_CLEANUP_SYSTEM.md  VERCEL_DEPLOYMENT.md  VSCODE_SETUP.md  analyze_builds.sh  build.sh  build_debug.sh  clean_all.sh  compare_compilers.sh  example_python_usage.py  git-auto-push.sh  main.cpp  motion_region_consolidator_test_log.txt  package-lock.json  package.json  pom.xml  pyproject.toml  record_demo.sh  requirements.txt  run_tests.sh  setup_multi_language.sh  simple_viewer_backup.js  test_python_bindings.cpp  test_python_bindings.py  vercel.json
.github/: deploy-trigger.txt
.github/workflows/: build-test.yml  cpp-quality.yml  debug.yml  docker.yml
api/: clustering.js  finetuning.js  index.js  motion.js  objects.js
birds_of_play.egg-info/: PKG-INFO  top_level.txt
config/: .clang-tidy
data/regions/: 3d32a6ea-1fb0-4037-9d92-5fe317fb38a8_7_results.json  3f8d58d2-6588-4a75-b923-fddd0b773f26_0_results.json  3f8d58d2-6588-4a75-b923-fddd0b773f26_1_results.json  3f8d58d2-6588-4a75-b923-fddd0b773f26_2_results.json  71a82e01-cb20-4134-b6e2-46574636ef57_3_results.json  8e841c47-108a-4312-b60b-75e55f145c4e_2_results.json  a553701f-6408-4179-a5f3-063f4cbce8e0_5_results.json  f21ebde2-4e23-4ecd-982e-b359e9b8aac9_2_results.json  f2c1efee-0b28-4bbc-b929-3517d495f5f9_5_results.json
docs/: DESIGN.md  INTERFACES.md  MULTI_LANGUAGE_STANDARDS.md  OVERVIEW.md  PROFESSIONAL_CPP_TEMPLATE.md  SAFETY.md  SECURITY.md  STANDARDS_COMPLIANCE.md  SYSTEM.md  TEST_PLAN.md
include/: camera_manager.hpp  motion_tracker.hpp
motion_detection/: BUILD_COMMANDS.md  BirdsOfPlay  CMakeLists.txt  CONFIG_CLEANUP_SUMMARY.md  Dockerfile  FINAL_CONFIG_STRUCTURE.md  MAKEFILE_USAGE.md  Makefile  README.md  STANDALONE_COMPONENT_TESTING.md  config.yaml  config_analysis.md  config_backup.yaml  config_original_backup.yaml  create_motion_mask.py  create_test_images.py  test_config.cpp  test_runner.sh
motion_detection/include/: config.hpp  data_collector.hpp  logger.h  logger.hpp  motion_processor.hpp  motion_region_consolidator.hpp  motion_tracker.hpp  object_classifier.hpp  object_tracker.hpp  tracked_object.hpp
motion_detection/models/: mobilenetv2-7.onnx  squeezenet.onnx
motion_detection/scripts/: mongo_queries.js
motion_detection/src/: config.cpp  data_collector.cpp  logger.cpp  main.cpp  motion_processor.cpp  motion_region_consolidator.cpp  motion_region_consolidator_example.cpp  motion_tracker.cpp  motion_visualization.cpp  object_classifier.cpp  object_tracker.cpp
motion_detection/tests/: MOTION_REGION_CONSOLIDATOR_TEST_RESULTS.md  config.yaml  config_test_thresholds.yaml  diagnostic_test.cpp  integration_test.cpp  motion_processor_test.cpp  motion_region_consolidator_test.cpp  motion_tracker_test.cpp  motion_tracker_test_2.cpp
motion_detection/web/: package-lock.json  package.json  server.js
motion_detection/web/public/: database.html  index.html
public/: index.html
src/: camera_manager.cpp  main.cpp  main.py  mongodb_functions.cpp  motion_tracker.cpp
src/birds_of_play.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/image_detection/: __init__.py  batch_detect_regions.py  cli.py  config.yaml  create_overlay.py  detect_objects_in_region.py  detection_config.yaml  extract_object.py  extract_region.py  highlight_region_in_frame.py  package-lock.json  package.json  simple_processor.py  test_detection.py
src/image_detection/detectors/: object_detector.py
src/image_detection/models/: detection_database.py  detection_processor.py  detection_result.py
src/image_detection/web/: package-lock.json  package.json  server.js
src/image_detection/web/public/: index.html
src/image_detection/web/public/css/: style.css
src/image_detection/web/public/js/: app.js
src/mongodb/: README.md  __init__.py  database_manager.py  file_storage_manager.py  frame_database.py  frame_database_v2.py  migrate_to_file_storage.py  performance_test.py  test_frame_database.py  test_thumbnail_system.py
src/motion_detection/: CMakeLists.txt  MOTION_PROCESSOR_GUIDE.md  MOTION_REGION_CONSOLIDATOR_GUIDE.md  Makefile  README_DOCUMENTATION.md  config.yaml  motion_processor_test_log.txt  motion_region_consolidator_test_log.txt  test_runner.sh
src/motion_detection/include/: motion_pipeline.hpp  motion_region_consolidator.hpp  motion_visualization.hpp
src/motion_detection/src/: motion_pipeline.cpp  motion_processor.cpp  motion_region_consolidator.cpp  python_bindings.cpp
src/motion_detection/tests/: MOTION_REGION_CONSOLIDATOR_TEST_RESULTS.md  integration_test.cpp  motion_processor_test.cpp  motion_processor_test_log.txt  motion_region_consolidator_test.cpp  test_helpers.hpp
src/test/java/com/example/: SampleTest.java
src/unsupervised_ml/: CONFIG_GUIDE.md  __init__.py  bird_clusterer.py  cluster_analyzer.py  cluster_server.py  cluster_visualizer.py  clustering_config.yaml  config_loader.py  feature_extractor.py  fine_tuning_server.py  fine_tuning_service.py  object_data_manager.py  requirements.txt  supervised_classifier.py  test_system.py  train_supervised_pipeline.py  user_corrections.json
src/unsupervised_ml/clustering/: bird_clusterer.py
src/unsupervised_ml/data/: object_data_manager.py
src/unsupervised_ml/web/: cluster_server.py
src/web/: package-lock.json  package.json  server.js
src/web/public/css/: style.css
src/web/public/js/: app.js
src/web/views/: index.ejs
test/: full_pipeline_test.py
test/vid/: vid_3.mov
tests/cpp/: test_camera.cpp  test_sample.cpp
tests/python/: test_sample.py
web/: detection_viewer.js  extract_region.py  fine_tuning_viewer.py  landing_page.js  package-lock.json  package.json  region_viewer.js  simple_viewer.js  start_viewer.sh
web/templates/: fine_tuning.html
