cmake_minimum_required(VERSION 3.14)
project(birds_of_play)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra --coverage")
enable_testing()
find_package(GTest REQUIRED)
add_executable(tests test_*.cpp)
target_link_libraries(tests ${GTEST_LIBRARIES} pthread --coverage)
add_test(NAME AllTests COMMAND tests)
